test/libsolidity/syntaxTests/errors/error_in_library.sol
library L {
    error E(uint);
}
// ----
